change the descripiton of the npm package

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iterm_quotes",
   "version": "1.0.4",
-  "description": "simple quotes generator whenever iterm opens up",
+  "description": "simple random quotes generator",
   "main": "index.js",
   "keywords": [
     "quotes",
